--- a/src/styles/null.scss
+++ b/src/styles/null.scss
@@ -25,6 +25,15 @@ a:active {
 html,
 body {
 	height: 100%;
+	::-webkit-scrollbar {
+		width: 0px;
+		height: 8px;
+		background-color: #ccbfa3;
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #e0841c;
+		border-radius: 9em;
+	}
 }
 body {
 	font-weight: 500;
