--- a/src/pages/CatalogPage/CatalogPage.scss
+++ b/src/pages/CatalogPage/CatalogPage.scss
@@ -1,134 +1,139 @@
-@import "../../styles/style.scss";
+@import '../../styles/style.scss';
 .catalog__top {
-  background: url("../../img/catalogPage/Catalog-bg.png");
+	background: url('../../img/catalogPage/Catalog-bg.png');
 }
-// .catalog-img {
-//   width: 255px;
-//   height: 200px;
-// }
+.catalog-img {
+	margin-bottom: toRem(25);
+}
 .catalog__top-h2 {
-  color: rgb(255, 255, 255);
-  @include adaptiveValue("font-size", 64, 25);
-  font-weight: 400;
-  line-height: 123%;
-  letter-spacing: 5%;
-  text-align: left;
-  padding-top: 134px;
-  padding-bottom: 65px;
+	color: rgb(255, 255, 255);
+	@include adaptiveValue('font-size', 64, 25);
+	font-weight: 400;
+	line-height: 123%;
+	letter-spacing: 5%;
+	text-align: left;
+	padding-top: 134px;
+	padding-bottom: 65px;
 }
 .catalog__container_top {
-  display: flex;
+	display: flex;
 }
 .catalog-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 265px;
-  height: 500px;
-  padding: 10px;
-  border-radius: 10px;
-  transition: box-shadow 500ms ease;
+	display: flex;
+	flex-direction: column;
+	margin: 0 auto;
+	width: 265px;
+	padding: 10px;
+	row-gap: toRem(25);
+	border-radius: 10px;
+	transition: box-shadow 500ms ease;
 }
 .catalog-card:hover {
-  box-shadow: 0px 0px 0px 0px rgba(186, 186, 186, 0.1),
-    2px 9px 21px 0px rgba(186, 186, 186, 0.1),
-    6px 38px 38px 0px rgba(186, 186, 186, 0.09),
-    14px 84px 51px 0px rgba(186, 186, 186, 0.05),
-    25px 150px 61px 0px rgba(186, 186, 186, 0.01),
-    39px 235px 67px 0px rgba(186, 186, 186, 0);
+	box-shadow: 0px 0px 0px 0px rgba(186, 186, 186, 0.1), 2px 9px 21px 0px rgba(186, 186, 186, 0.1),
+		6px 38px 38px 0px rgba(186, 186, 186, 0.09), 14px 84px 51px 0px rgba(186, 186, 186, 0.05),
+		25px 150px 61px 0px rgba(186, 186, 186, 0.01), 39px 235px 67px 0px rgba(186, 186, 186, 0);
 }
 .catalog__products {
-  padding-top: 140px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-  justify-content: space-evenly;
+	@include adaptiveValue('padding-top', 50, 30);
+	@include adaptiveValue('padding-bottom', 50, 30);
+	display: flex;
+	flex-wrap: wrap;
+	gap: 40px;
+	justify-content: space-evenly;
 }
 .catalog__filter {
-  padding-top: 140px;
-  padding-bottom: 100px;
+	@include adaptiveValue('padding-top', 50, 30);
+	@include adaptiveValue('padding-bottom', 50, 30);
+	padding-bottom: 100px;
 }
 .cart-btn {
-  border-radius: 10px;
-  background: rgb(245, 117, 32);
-  color: white;
-  padding: 15px 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background 500ms ease;
-  gap: 15px;
-  font-size: 16px;
+	border-radius: 10px;
+	background: #f57520;
+	color: white;
+	padding: 15px 0px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background-color 500ms ease;
+	gap: 15px;
+	font-size: 16px;
 }
 .cart-btn:hover {
-  background: rgba(245, 127, 42, 1);
+	background-color: rgba(245, 127, 42, 1);
 }
 .cart-btn:active {
-  background: rgba(225, 97, 12, 1);
+	background-color: rgba(225, 97, 12, 1);
 }
 .catalog-card h3 {
-  color: rgb(16, 16, 16);
-  font-size: 18px;
-  font-weight: 300;
-  line-height: 160%;
-  letter-spacing: 1%;
-  text-align: left;
+	color: rgb(16, 16, 16);
+	font-size: 25px;
+	font-weight: 500;
+	letter-spacing: 1%;
+	text-transform: uppercase;
+	@media (any-hover: hover) {
+		&:hover {
+			text-decoration: underline;
+			cursor: pointer;
+		}
+	}
 }
 .catalog-card p {
-  color: rgb(119, 119, 119);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 123%;
-  letter-spacing: 0%;
-  text-align: left;
-  margin-top: 16px;
-  margin-bottom: 25px;
+	color: rgb(119, 119, 119);
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 123%;
+	letter-spacing: 0%;
+	text-align: left;
+	margin-top: 16px;
+	margin-bottom: 25px;
 }
 .catalog__img {
-  width: 255px;
-  height: 220px;
-}
-.catalog__flag {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 0;
-}
-.catalog__flag p {
-  color: rgb(77, 147, 44);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 160%;
-  letter-spacing: 0%;
-  text-align: left;
-}
-.catalog__flag img {
-  border-radius: 10px 0;
+	width: 255px;
+	height: 220px;
 }
 .price-btn {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	position: relative;
 }
 .price-btn svg {
-  width: 30px;
+	width: 30px;
 }
 .edit-img {
-  width: 30px;
+	width: 30px;
 }
+
+.pagination-list {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: toRem(5);
+	@include adaptiveValue('padding-bottom', 50, 20);
+}
+
+.pagination-item {
+	border: 5px solid #f57520;
+	padding: toRem(5) toRem(10);
+	@media (any-hover: hover) {
+		&:hover {
+			cursor: pointer;
+		}
+	}
+}
+
 @media (max-width: 600px) {
-  .catalog__container_top {
-    display: block;
-    margin: 0 auto;
-  }
-  .catalog__filter {
-    display: flex;
-    justify-content: center;
-  }
-  .catalog__products {
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-  }
+	.catalog__container_top {
+		display: block;
+		margin: 0 auto;
+	}
+	.catalog__filter {
+		display: flex;
+		justify-content: center;
+	}
+	.catalog__products {
+		display: flex;
+		justify-content: center;
+		justify-content: space-evenly;
+	}
 }
