--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,8 +12,8 @@
     align-items: center;
     justify-content: space-between;
   }
-  &__logo {
-  }
+  // &__logo {
+  // }
 
   &__menu {
     @media (max-width: 600px) {
@@ -24,7 +24,7 @@
       height: 100%;
       background-color: #333;
       color: #fff;
-      padding: 25px;
+      padding: 26px;
       font-size: 35px;
       transition: all 0.3s;
     }
