--- a/src/components/product/Products.css
+++ b/src/components/product/Products.css
@@ -4,3 +4,26 @@
 .editProduct-inp {
   border: 1px solid black;
 }
+.category {
+  border: 1px solid black;
+  margin-right: 30px;
+}
+.add-inputs {
+  width: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.add-inputs input {
+  width: 300px;
+  height: 30px;
+  font-size: 15px;
+  padding-left: 10px;
+}
+.add-inputs button {
+  background-color: rgb(245, 117, 32);
+  color: white;
+  padding: 15px 0;
+  border-radius: 10px;
+}
