--- a/src/pages/DetailsPage/DetailsPage.scss
+++ b/src/pages/DetailsPage/DetailsPage.scss
@@ -166,7 +166,7 @@
 
   &__name-descr {
     width: 1280px;
-    height: 96px;
+    // height: 96px;
     left: 320px;
     right: -320px;
     top: 1175px;
