--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,55 +1,46 @@
 @import "../../styles/style.scss";
+
 .footer {
-  background: #000;
-}
-.footer-menu {
-  color: white;
-  display: flex;
-  align-items: center;
-  gap: 80px;
-}
-.f-m-katalog {
-  display: flex;
-  flex-direction: column-reverse;
-  color: white;
-}
-.f-m-klient {
-  color: white;
-}
-.foot {
-  color: white;
-}
-.footer__container {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-.footer__top {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-}
-.footer__bottom {
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-}
-.footer-icons {
-  display: flex;
-}
-.blocks {
-  color: white;
-  display: flex;
-  justify-content: space-between;
-}
-.block__item {
-  padding: 10px;
-  display: flex;
-}
-.block {
-  font-size: 20px;
-  font-weight: 800;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
+  background-color: #000;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 49px;
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
+    text-align: center;
+    width: 100%;
+  }
+
+  .footer__logo,
+  .footer__menu {
+    width: 100%;
+  }
+
+  .menu-footer-list {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    font-weight: bold;
+  }
+
+  @media (min-width: 768px) {
+    &__container {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    .menu-footer-list {
+      flex-direction: row;
+      margin-left: 0;
+      gap: 20px;
+    }
+  }
 }
