--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,23 +1,22 @@
 @import "../../styles/style.scss";
 
 .footer {
-  background-color: #000;
+  background-color: #101010;
   color: #fff;
   text-transform: uppercase;
-  padding: 49px;
+  padding: 49px 29px;
 
   &__container {
     display: flex;
-    flex-direction: column;
-    // align-items: center;
-    // justify-content: center;
-    text-align: center;
-    width: 100%;
+    align-items: flex-start;
+    justify-content: space-between;
+    // text-align: center;
+    gap: 50px;
   }
 
-  .footer__logo,
-  .footer__menu {
-    width: 100%;
+  .footer__logo {
+    // width: 100%;
+    // padding: 20px;
   }
 
   .menu-footer-list {
@@ -25,22 +24,30 @@
     padding: 0;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    // padding: 15px;
     gap: 30px;
     font-weight: bold;
   }
 
-  @media (min-width: 768px) {
+  @media (max-width: 922px) {
     &__container {
-      flex-direction: row;
-      justify-content: space-between;
-    }
-
-    .menu-footer-list {
-      flex-direction: row;
-      margin-left: 0;
-      gap: 20px;
+      flex-direction: column;
     }
   }
+}
+
+.footer-mine-menu {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  line-height: normal;
+}
+
+.footer-menu {
+  font-size: 35px;
+  font-weight: 600;
+  text-align: left;
+  margin-bottom: 35px;
 }
