--- a/src/pages/DetailsPage/DetailsPage.scss
+++ b/src/pages/DetailsPage/DetailsPage.scss
@@ -6,8 +6,8 @@
 }
 .details {
   margin-top: 20px;
-  &__container {
-  }
+  // &__container {
+  // }
 
   &__imgmain {
     img {
@@ -19,8 +19,8 @@
 }
 
 .details {
-  &__block2 {
-  }
+  // &__block2 {
+  // }
 
   &__997 {
     width: 510px;
@@ -142,8 +142,8 @@
   }
 
   &__heart-img {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
   }
 }
 .details {
@@ -199,8 +199,8 @@
   }
 }
 .details {
-  &__block4 {
-  }
+  // &__block4 {
+  // }
   .block__item2 {
     color: #4c4c4c;
   }
