added cart page

--- a/src/components/Payment/Payment.scss
+++ b/src/components/Payment/Payment.scss
@@ -465,3 +465,11 @@ form {
     opacity: 1 !important;
   }
 }
+.bread-crumbds-payment {
+  color: black;
+  padding-top: 50px;
+  padding-left: 5%;
+}
+.bread-crumbds-payment strong {
+  color: orange;
+}
