--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -104,14 +104,23 @@
   margin: 0;
 }
 
-.cart {
+.cart__price {
+  p {
+    width: 105px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+.cart .cart {
   // .cart__count
 
-  &__count {
+  &__count input {
     width: 80px;
     height: 40px;
     border: 1px solid rgb(229, 229, 229);
     border-radius: 10px;
+    padding: 0 10px;
   }
 }
 
@@ -173,7 +182,13 @@
 }
 
 .cart__prices {
-  font-size: 16px;
+  p {
+    font-size: 16px;
+    width: 100px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
 }
 
 .cart__totalword {
@@ -182,6 +197,11 @@
 
 .cart__totalsum {
   font-size: 16px;
+  width: 165px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-left: 50px;
 }
 
 //bottom block
