--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -27,6 +27,13 @@
   align-items: center;
   justify-content: space-between;
 }
+.filter__input-price label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  margin-top: 15px;
+}
 .filter__input-price input {
   width: 100px;
   height: 46px;
