--- a/src/pages/DetailsPage/DetailsPage.scss
+++ b/src/pages/DetailsPage/DetailsPage.scss
@@ -4,6 +4,16 @@
   display: flex;
   justify-content: space-between;
 }
+.bread-crumbds-details {
+  display: flex;
+  gap: 10px;
+  color: black;
+  padding-bottom: 50px;
+}
+.bread-crumbds-details strong {
+  color: rgb(245, 117, 32);
+}
+
 .details {
   margin-top: 20px;
   &__container {
