--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -71,3 +71,64 @@
     }
   }
 }
+.app-bar {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.avatar-container {
+}
+
+.avatar-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.avatar {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+
+// .account-circle-icon {
+//   font-size: 2px;
+// }
+
+.menu {
+  position: absolute;
+  top: 60px;
+  right: 0;
+  background-color: #000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 2px;
+  display: none;
+}
+
+.menu.open {
+  display: block;
+}
+
+.menu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  width: 130px;
+  height: 100px;
+}
+
+.menu ul li {
+  padding: 5px;
+  cursor: pointer;
+}
+
+// .menu ul li:hover {
+//   background-color: #f0f0f0;
+// }
+.avatar-auth {
+  width: 15px;
+  height: 15px;
+  background-color: #f0f0f0;
+  border-radius: 6px;
+}
