--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -1,54 +1,65 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 150px;
-  margin-left: 500px;
-}
+@import '../../styles/style.scss';
 
-.error {
-  color: red;
-  margin-bottom: 10px;
-}
+.auth {
+	padding: toRem(30) 0 toRem(30) 0;
+	&__container {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		gap: toRem(20);
+	}
 
-.title {
-  font-family: Montserrat, sans-serif;
-  letter-spacing: 2px;
-  font-size: 32px;
-  margin-bottom: 20px;
-}
+	&__title {
+		font-size: toRem(25);
+		font-weight: 600;
+		text-transform: uppercase;
+	}
 
-.input {
-  margin-top: 10px;
-  width: 40%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
+	&__error {
+	}
 
-.button {
-  margin-top: 10px;
-  width: 40%;
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
+	&__input {
+		background-color: #e1e1e1;
+		padding: toRem(10) toRem(15);
+		font-size: toRem(20);
+		border-radius: toRem(10);
+		color: #000000;
+		outline: none;
+		transition: all 0.3s;
+		&:focus {
+			box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+		}
+	}
 
-.button:hover {
-  background-color: #0056b3;
-}
+	&__button {
+		background-color: #ea7b36;
+		color: #fff;
+		text-transform: uppercase;
+		padding: toRem(15) toRem(10);
+		border-radius: toRem(10);
+		transition: all 0.3s;
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: #f27425;
+			}
+		}
+	}
 
-.checkbox {
-  margin-top: 10px;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-}
+	&__google {
+		display: flex;
+		align-items: center;
+		gap: toRem(10);
+		padding: toRem(10) toRem(23);
+		border: 1px solid #000;
+		border-radius: 10px;
 
-.checkbox input {
-  margin-right: 5px;
+		svg {
+			width: toRem(25);
+			height: toRem(30);
+		}
+	}
+
+	&__checkbox {
+	}
 }
