--- a/src/components/product/Products.css
+++ b/src/components/product/Products.css
@@ -1,29 +1,58 @@
+.admin-page {
+	padding: 50px 0;
+}
 .Addproduct-input {
-  border: 1px solid black;
+	border: 1px solid black;
 }
 .editProduct-inp {
-  border: 1px solid black;
+	border: 1px solid black;
 }
 .category {
-  border: 1px solid black;
-  margin-right: 30px;
+	padding: 10px;
+	font-size: 20px;
+	border-radius: 10px;
+	border: 1px solid black;
+	margin-bottom: 10px;
+	max-width: 100%;
 }
+
+.category__button {
+	background-color: rgb(241, 149, 57);
+	color: #fff;
+	padding: 16px 10px;
+	border-radius: 10px;
+	margin-left: 10px;
+	transition: all 0.3s;
+	margin-bottom: 20px;
+}
+.category__button:hover {
+	background-color: rgb(218, 125, 31);
+}
+
 .add-inputs {
-  width: 300px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+	gap: 20px;
+}
+.add-inputs select {
+	border: 1px solid #000;
+	border-radius: 10px;
+	font-size: 20px;
+	color: grey;
+	padding-left: 5px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 .add-inputs input {
-  width: 300px;
-  height: 30px;
-  font-size: 15px;
-  padding-left: 10px;
+	font-size: 15px;
+	padding: 10px;
+	font-size: 20px;
+	border-radius: 10px;
 }
 .add-inputs button {
-  background-color: rgb(245, 117, 32);
-  color: white;
-  padding: 15px 0;
-  border-radius: 10px;
+	background-color: rgb(245, 117, 32);
+	color: white;
+	padding: 15px 0;
+	border-radius: 10px;
 }
