--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,11 +3,13 @@
 .top-description {
 	background: url('../../img/mainPage/main-bg.png') center / cover no-repeat;
 	color: #fff;
-	padding: 30px 0 130px 0;
+	padding-top: toRem(30);
+	@include adaptiveValue('padding-bottom', 130, 50);
 	&__text {
 		max-width: toRem(600);
 		@include adaptiveValue('padding-right', 85, 50);
 		@include adaptiveValue('padding-left', 85, 50);
+		padding-bottom: toRem(20);
 		@media (max-width: em(425)) {
 			padding-left: 0;
 			padding-right: 0;
@@ -301,4 +303,37 @@
 		border-radius: toRem(10);
 		color: #fff;
 	}
+}
+//========================================================================================================================================================
+
+.swiper-slide {
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	color: #f2a02c !important;
+	@media (max-width: em(600)) {
+		display: none !important;
+	}
+}
+
+.swiper-pagination {
+	bottom: 0px !important;
+	left: 100px !important;
+	@media (min-width: em(601)) {
+		display: none;
+	}
+}
+
+.swiper-pagination-bullet {
+	background-color: #fed30f !important;
+	opacity: 0.5 !important;
+	width: 10px !important;
+	height: 10px !important;
+}
+
+.swiper-pagination-bullet-active {
+	width: 15px !important;
+	height: 15px !important;
+	opacity: 1 !important;
 }
