--- a/src/styles/null.scss
+++ b/src/styles/null.scss
@@ -1,75 +1,75 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900&display=swap");
 
-$fontFamily: 'Nunito';
+$fontFamily: "Nunito";
 $fontSize: 18px;
 $mainColor: #000;
 
 * {
-	padding: 0px;
-	margin: 0px;
-	border: 0px;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
 }
 *,
 *:before,
 *:after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 :focus,
 :active {
-	// outline: none;
+  // outline: none;
 }
 a:focus,
 a:active {
-	// outline: none;
+  // outline: none;
 }
 html,
 body {
-	height: 100%;
-	::-webkit-scrollbar {
-		width: 0px;
-		height: 8px;
-		background-color: #ccbfa3;
-	}
-	::-webkit-scrollbar-thumb {
-		background-color: #e0841c;
-		border-radius: 9em;
-	}
+  height: 100%;
+  ::-webkit-scrollbar {
+    width: 0px;
+    height: 9px;
+    background-color: #ccbfa3;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #e0841c;
+    border-radius: 9em;
+  }
 }
 body {
-	font-weight: 500;
-	color: $mainColor;
-	line-height: 1;
-	font-family: $fontFamily;
-	font-size: $fontSize;
-	//text-rendering: optimizeLegibility;
-	-ms-text-size-adjust: 100%;
-	-moz-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  font-weight: 500;
+  color: $mainColor;
+  line-height: 1;
+  font-family: $fontFamily;
+  font-size: $fontSize;
+  //text-rendering: optimizeLegibility;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 input,
 button,
 textarea {
-	font-family: $fontFamily;
-	font-size: inherit;
-	line-height: inherit;
+  font-family: $fontFamily;
+  font-size: inherit;
+  line-height: inherit;
 }
 button {
-	cursor: pointer;
-	color: inherit;
-	font-weight: inherit;
-	background-color: transparent;
+  cursor: pointer;
+  color: inherit;
+  font-weight: inherit;
+  background-color: transparent;
 }
 a {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 ul li {
-	list-style: none;
+  list-style: none;
 }
 img {
-	vertical-align: top;
+  vertical-align: top;
 }
 h1,
 h2,
@@ -77,32 +77,32 @@ h3,
 h4,
 h5,
 h6 {
-	font-weight: inherit;
-	font-size: inherit;
+  font-weight: inherit;
+  font-size: inherit;
 }
 
 body {
-	.lock & {
-		overflow: hidden;
-		touch-action: none;
-		overscroll-behavior: none;
-	}
-	.loaded & {
-	}
+  .lock & {
+    overflow: hidden;
+    touch-action: none;
+    overscroll-behavior: none;
+  }
+  .loaded & {
+  }
 }
 
 #root {
-	min-height: 100%;
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
-	@supports (overflow: clip) {
-		overflow: clip;
-	}
-	> main {
-		flex: 1 1 auto;
-	}
-	> * {
-		min-width: 0;
-	}
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  @supports (overflow: clip) {
+    overflow: clip;
+  }
+  > main {
+    flex: 1 1 auto;
+  }
+  > * {
+    min-width: 0;
+  }
 }
